--- a/.github/workflows/build-custom.yml
+++ b/.github/workflows/build-custom.yml
@@ -1,6 +1,8 @@
 name: "Build Custom OpenWrt Installer ISO"
 
 on:
+  schedule:
+    - cron: '0 */6 * * *'
   workflow_dispatch:
     inputs:
       download_url:
