--- a/.github/workflows/build-imm.yml
+++ b/.github/workflows/build-imm.yml
@@ -1,7 +1,9 @@
 name: "Build ImmortalWrt Installer ISO"
 
 on:
- workflow_dispatch:
+  schedule:
+    - cron: '0 */6 * * *'
+  workflow_dispatch:
 
 jobs:
   build-release:
